--- a/src/app/forms/forms.component.css
+++ b/src/app/forms/forms.component.css
@@ -290,7 +290,6 @@ input[type="checkbox"]{
     background-color: #fff;
     border-radius: 1rem;
     padding: 0.5rem;
-    /* font-size: 1.2rem; */
     white-space: pre;
     color: #555;
     overflow: hidden;
@@ -299,12 +298,12 @@ input[type="checkbox"]{
 .generated-code-area .generated-code pre {
     height: 100%;
     white-space: pre;
-    font-family: monospace; /* Use a monospaced font for code readability */
+    font-family: monospace;
     padding: 10px;
-    border: 1px solid #ccc; /* Optional: Add a border for better visualization */
+    border: 1px solid #ccc;
     border-radius: calc(1rem - 5px);
-    background-color: #f5f5f5; /* Optional: Add a background color for better contrast */
-    overflow: auto; /* Optional: Add a scrollbar for long code blocks */
+    background-color: #f5f5f5;
+    overflow: auto;
   }
   
 
@@ -333,3 +332,48 @@ input[type="checkbox"]{
 }
 
 
+@media screen and (max-width: 765px) {
+    .form-container{
+        grid-template-rows: 90% 10%;
+        grid-template-columns: 100%;
+    }
+    .form-elements{
+        grid-row: 2;
+    }
+    .form-area{
+        grid-row: 1;
+    }
+    .form-elements .container .card h1{
+        display: none;
+    }
+    .form-elements .elements-list{
+        width: 100%;
+        height: 100%;
+        padding: 0 1rem;
+        overflow-y: scroll;
+    }
+    .form-elements .elements-list ul{
+        display: flex;
+    }
+    .form-elements .elements-list ul li{
+        border-bottom: none;
+    }
+    .form-elements .elements-list ul li .top span:first-child{
+        display: none;
+    }
+    .form-elements .elements-list ul li .bottom{
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+    }
+    .generated-code-area{
+        z-index: 5;
+    }
+    .generated-code-area .generated-code{
+        height: 65%;
+        width: 90%;
+        font-size: 20px;
+    }
+}
