--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0');
+
 nav{
     display: flex;
     width: 100%;
@@ -58,4 +60,65 @@ li.active::before{
     bottom: 5px;
     border-radius: 10px;
     background-color: rgb(220, 208, 225);
+}
+
+#menu,#close{
+    display: none;
+    cursor: pointer;
+}
+
+@media screen and (max-width:765px) {
+    nav{
+        align-items: center;
+        justify-content: center;
+    }
+    .brand-logo{
+        position: relative;
+        width: 100%;
+    }
+    .brand-logo .text{
+        font-size: 30px;
+    }
+    #menu{
+        display: block;
+        position: absolute;
+        top: 50%;
+        left: 2rem;
+        transform: translateY(-50%);
+        scale: 1.5;
+    }
+    #close{
+        display: block;
+    }
+    #close span{
+        scale: 2;
+    }
+    .nav-links{
+        position: absolute;
+        top: 0;
+        left: -100%;
+        height: 100%;
+        width: 80%;
+        padding: 0;
+        padding-top: 1.5rem;
+        z-index: 10;
+        background-color: rgba(0, 0, 0, 0.5);
+        transition: all 0.3s ease-in-out;
+    }
+    ul{
+        display: inline-block;
+    }
+    li{
+        width: 100%;
+        height: 5rem;
+        font-size: 25px;
+        justify-content: flex-start;
+        padding-left: 2rem;
+    }
+    li.active{
+        font-size: 30px;
+    }
+    li.active::before{
+        background-color: transparent;
+    }
 }
