About page completed

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,33 @@
-<p>about works!</p>
+<div class="container">
+    <div class="details">
+        <div class="info">
+            <div>
+                <div class="text">
+                    <p class="top">Hey There!</p>
+                    <p class="middle">I am Bijay Pandey</p>
+                    <p class="bottom">A full stack Developer</p>
+                </div>
+                <div class="socials">
+                    <a href="https://m.facebook.com/bijay.pandey.56232?eav=AfYUrfdxcYb5G_xEwIug3yAdOjFz2AnyM9VG23ztEILtQWK-qKxmJVH7QiFdKfMQmc4&paipv=0" target="_blank">
+                        <img src="../../assets/facebook_icon.png" alt="">
+                    </a>
+                    <a href="https://www.instagram.com/cognisolver/?utm_source=qr&amp%3Bigshid=NGExMmI2YTkyZg%3D%3D" target="_blank">
+                        <img src="../../assets/instagram_icon.png" alt="">
+                    </a>
+                    <a href="https://www.youtube.com/@CogniSolver" target="_blank">
+                        <img src="../../assets/youtube_icon.png" alt="">
+                    </a>
+                    <a href="https://www.linkedin.com/in/bijay-pandey/" target="_blank">
+                        <img src="../../assets/linkedin_icon.png" alt="">
+                    </a>
+                </div>
+                <div class="button">
+                    <button title="currently-not-working">Download CV</button>
+                </div>
+            </div>
+        </div>
+        <div class="image">
+            <img src="../../assets/image2.png" alt="">
+        </div>
+    </div>
+</div>
