added animation in about section and made it responsive

--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -1,134 +1,170 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap");
 
-.container{
-    height: 100%;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    overflow: hidden;
+.container {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
 }
 
-.details{
+.details {
+  position: relative;
+  width: 75%;
+  height: 95%;
+  display: flex;
+}
+
+.details .info {
+  position: inherit;
+  width: 65%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  animation: moveText linear 0.5s;
+}
+
+.info > div {
+  height: 75%;
+  width: 90%;
+}
+
+.text p {
+  height: 4rem;
+  display: flex;
+  align-items: center;
+  padding-left: 2rem;
+  font-family: sans-serif;
+  text-transform: uppercase;
+}
+
+.text p:nth-child(1) {
+  font-size: 0.9rem;
+  font-family: "Roboto Mono", monospace;
+  color: rgb(192, 209, 209);
+  position: relative;
+  z-index: 1;
+}
+.text p:nth-child(2) {
+  color: white;
+  font-size: 3rem;
+  font-weight: 600;
+}
+.text p:nth-child(3) {
+  font-family: sans-serif;
+  color: rgb(231, 231, 231);
+  font-size: 1.3rem;
+}
+
+.socials {
+  margin: 2rem 0 1rem;
+  height: 2rem;
+  width: 35%;
+  padding-left: 1.5rem;
+  display: flex;
+  justify-content: space-around;
+}
+
+.socials img {
+  height: 100%;
+  cursor: pointer;
+}
+
+.button {
+  padding-left: 2rem;
+  height: 4rem;
+  display: flex;
+  align-items: center;
+}
+
+.button button {
+  border: none;
+  padding: 0.8rem;
+  border-radius: 0.5rem;
+  color: white;
+  font-weight: 600;
+  background: linear-gradient(
+    45deg,
+    rgb(50, 50, 191),
+    rgb(54, 171, 180),
+    rgb(211, 56, 211)
+  );
+  box-shadow: 1px 1px 5px rgba(255, 255, 255, 0.8),
+    1px 1px 5px rgba(255, 255, 255, 0.8);
+  cursor: pointer;
+  user-select: none;
+}
+
+.button button:active {
+  margin-top: 4px;
+}
+
+.details .image {
     position: relative;
-    width: 75%;
-    height: 95%;
-    display: flex;
+  width: 45%;
+  height: 100%;
+  padding-bottom: 5rem;
+  animation: moveImage linear 0.6s;
 }
 
-.details .info{
-    width: 65%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.image img {
+  position: absolute;
+  scale: 1.2;
 }
 
-.info > div{
-    height: 75%;
-    width: 90%;
+@keyframes moveImage {
+  0% {
+    right: -10rem;
+  }
+  100% {
+    right: 0rem;
+  }
+}
+@keyframes moveText {
+  0% {
+    left: -9rem;
+  }
+  100% {
+    left: 0rem;
+  }
+}
+@keyframes moveBg {
+  0% {
+    background-position-x: 12rem;
+  }
+  100% {
+    background-position-x: -2.5rem;
+  }
 }
 
-.text p{
-    height: 4rem;
-    display: flex;
-    align-items: center;
-    padding-left: 2rem;
-    font-family: sans-serif;
-    text-transform: uppercase;
-}
+@media screen and (max-width: 765px) {
+  .details {
+    width: 100%;
+    flex-direction: column;
+  }
 
-.text p:nth-child(1){
-    font-size: 0.9rem;
-    font-family: 'Roboto Mono', monospace;
-    color: rgb(192, 209, 209);
-}
-.text p:nth-child(2){
-    color: white;
-    font-size: 3rem;
-    font-weight: 600;
-}
-.text p:nth-child(3){
-    font-family: sans-serif;
-    color: rgb(231, 231, 231);
-    font-size: 1.3rem;
-}
+  .info {
+    width: 100% !important;
+    height: 70% !important;
+    display: block;
+    background-image: url("../../assets/image2.png");
+    background-repeat: no-repeat;
+    background-position-x: -2.5rem;
+    background-position-y: -6rem;
+    animation: moveText linear 0.5s, moveBg linear 0.5s;
+  }
 
-.socials{
-    margin: 2rem 0 1rem;
-    height: 2rem;
-    width: 35%;
-    padding-left: 1.5rem;
-    display: flex;
-    justify-content: space-around;
-}
+  .text p {
+    padding: 0;
+  }
 
-.socials img{
-    height: 100%;
-    cursor: pointer;
-}
+  .button {
+    padding: 0;
+  }
 
-.button{
-    padding-left: 2rem;
-    height: 4rem;
-    display: flex;
-    align-items: center;
-}
-
-.button button{
-    border: none;
-    padding: 0.8rem;
-    border-radius: 0.5rem;
-    color: white;
-    font-weight: 600;
-    background: linear-gradient(45deg, rgb(50, 50, 191), rgb(54, 171, 180), rgb(211, 56, 211));
-    box-shadow: 1px 1px 5px rgba(255, 255, 255, 0.8),
-                1px 1px 5px rgba(255, 255, 255, 0.8);
-    cursor: pointer;
-    user-select: none;
-}
-
-.button button:active{
-    margin-top: 4px;
-}
-
-.details .image{
-    width: 45%;
-    height: 100%;
-    padding-bottom: 5rem;
-}
-
-.image img{
-    position: absolute;
-    scale: 1.2;
-}
-
-@media screen and (max-width:765px) {
-    .details{
-        width: 95%;
-        flex-direction: column;
-    }
-
-    .info{
-        width: 100% !important;
-        display: block;
-    }
-
-    .text p:nth-child(2){
-        position: relative;
-        z-index: 7;
-    }
-
-    .image{
-        position: absolute;
-        top: 0;
-        right: 0;
-    }
-
-    .image img{
-        position: absolute;
-        top: -10rem;
-        left: -6rem;
-        scale: 1;
-    }
+  .image {
+    display: none;
+  }
 }
